Remove tie case. Need to rewrite for ties.

--- a/index.html
+++ b/index.html
@@ -8,29 +8,28 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body class="container">
-        <div class="header">
-
+        <div class="header mb-5 mx-5">
             <h1>Tic-Tac-Toe</h1>
-            <button id="reset"></button>
+            <button id="reset">Let's play again!</button>
+        </div>
 
-            <div class="board">
-                <div id="toprow" class="row border-bottom">
-                    <button class="space left"></button>
-                    <button class="space center"></button>
-                    <button class="space right"></button>
-                </div>
-                <div id="middlerow" class="row border-bottom">
-                    <button class="space left"></button>
-                    <button class="space center"></button>
-                    <button class="space right"></button>
-                </div>
-                <div id="bottomrow" class="row">
-                    <button class="space left"></button>
-                    <button class="space center"></button>
-                    <button class="space right"></button>
-                </div>
+        <div class="board">
+            <div id="toprow" class="row border-bottom border-dark">
+                <button class="space left"></button>
+                <button class="space center border-left border-dark"></button>
+                <button class="space right border-left border-dark"></button>
             </div>
-
+            <div id="middlerow" class="row border-bottom border-dark">
+                <button class="space left"></button>
+                <button class="space center border-left border-dark"></button>
+                <button class="space right border-left border-dark"></button>
+            </div>
+            <div id="bottomrow" class="row">
+                <button class="space left"></button>
+                <button class="space center border-left border-dark"></button>
+                <button class="space right border-left border-dark"></button>
+            </div>
+        </div>
 
 
 
